--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 27
@@ -9,11 +10,16 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            lintOptions {
+                checkReleaseBuilds false
+                abortOnError false
+            }
         }
     }
     compileOptions {
@@ -30,6 +36,16 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    //Firebase Library
+    implementation 'com.google.firebase:firebase-core:16.0.3'
+    implementation 'com.google.firebase:firebase-inappmessaging-display:17.0.1'
+
+    //Crashlytics Library
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
+
+    //Multidex Library
+    implementation 'com.android.support:multidex:1.0.3'
+
     //Retrofit Library
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
@@ -45,3 +61,5 @@ dependencies {
     //Toasty Library
     implementation 'com.github.GrenderG:Toasty:1.3.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
