--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ android {
         targetCompatibility 1.8
         sourceCompatibility 1.8
     }
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
 }
 
 dependencies {
@@ -60,6 +63,13 @@ dependencies {
 
     //Toasty Library
     implementation 'com.github.GrenderG:Toasty:1.3.0'
+
+    //Picasso Library
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    //Okhttp
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
