--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,9 @@ dependencies {
     //Okhttp
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+
+    //FCM
+    implementation 'com.google.firebase:firebase-messaging:17.3.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
